--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,6 @@ jobs:
         with:
           filename: test_README.md
           folder: plugins
+          github_token: ${{ secrets.GITHUB_TOKEN }}
         env:
           GITHUB_REPOSITORY: tauri-apps/plugins-workspace
