--- a/action.yml
+++ b/action.yml
@@ -9,8 +9,8 @@ inputs:
     description: 'Path to location of plugins'
     required: true
     default: 'plugins'
-  github-token:
-    description: 'Use ${{ secrets.GITHUB_TOKEN }} as value'
+  github_token:
+    description: 'Use the variable secrets.GITHUB_TOKEN as value'
     required: true
 runs:
   using: 'node16'
@@ -22,4 +22,4 @@ runs:
       with:
         file-path: ${{ inputs.filename }}
         commit-msg: Updated ${{ inputs.filename }}
-        github-token: ${{ inputs.github-token }}
+        github-token: ${{ inputs.github_token }}
