Now it really should be fixed!

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
         env:
           GITHUB_REPOSITORY: tauri-apps/plugins-workspace
+          GITHUB_REF_NAME: v2
