--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,7 @@
 name: 'Tauri Plugin README Generator'
 description: 'Generate README for Tauri Plugin Workspace'
+icon: code
+color: green
 inputs:
   filename:
     description: 'Output filename'
